--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-4060420250429001",
     "@dcloudio/uni-mp-xhs": "3.0.0-4060420250429001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4060420250429001",
+    "@dcloudio/uni-ui": "^1.5.7",
     "vue": "^3.4.21",
     "vue-i18n": "^9.1.9"
   },
@@ -73,6 +74,8 @@
     "globals": "^16.2.0",
     "prettier": "^3.5.3",
     "sass": "^1.89.1",
+    "unplugin-auto-import": "^19.3.0",
+    "unplugin-vue-components": "^28.7.0",
     "vite": "5.2.8"
   }
 }
