--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-4060620250520001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4060620250520001",
     "@dcloudio/uni-ui": "^1.5.7",
+    "default-passive-events": "^4.0.0",
     "vue": "^3.4.21",
     "vue-i18n": "^9.1.9"
   },
