--- a/src/manifest.json
+++ b/src/manifest.json
@@ -50,7 +50,7 @@
   "quickapp": {},
   /* 小程序特有相关 */
   "mp-weixin": {
-    "appid": "wx08000d17cc81125a",
+    "appid": "wx1f10b7eba2a22239",
     "setting": {
       "urlCheck": false
     },
