--- a/src/manifest.json
+++ b/src/manifest.json
@@ -50,9 +50,10 @@
   "quickapp": {},
   /* 小程序特有相关 */
   "mp-weixin": {
-    "appid": "wx1f10b7eba2a22239",
+    "appid": "wxd02782f5a0d79abe",
     "setting": {
-      "urlCheck": false
+      "urlCheck": true,
+      "minified": true
     },
     "usingComponents": true
   },
@@ -68,5 +69,12 @@
   "uniStatistics": {
     "enable": false
   },
-  "vueVersion": "3"
+  "vueVersion": "3",
+  "h5": {
+    "title": "wallpaper-酒笙清梅",
+    "router": {
+      "base": "/wallpaper/",
+      "mode": "hash"
+    }
+  }
 }
